<resources>
    <string name="app_name">ML Video Program</string>
    <string name="action_settings">Settings</string>
    <string name="hint_fname">First Name</string>
    <string name="hint_lname">Last Name</string>
    <string name="hint_email">Email</string>
    <string name="hint_mobile">Mobile</string>
    <string name="btn_sign_up">Sign Up</string>
    <string name="err_msg_fname">Enter your first name</string>
    <string name="err_msg_lname">Enter your last name</string>
    <string name="err_msg_email">Enter valid email address</string>
    <string name="err_msg_mobile">Enter valid mobile number</string>
</resources>
